kubernetes/base-services/jupyterhub/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    app.kubernetes.io/managed-by: rpi-k8s-cluster
