kubernetes/base-services/jupyterhub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub
  namespace: development
  labels:
    app: jupyterhub
    app.kubernetes.io/name: jupyterhub
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
    - name: hub
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: jupyterhub
---
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub-external
  namespace: development
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: jupyterhub
